--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pplug-bluetooth (1.1) trixie; urgency=medium
+
+  * Remove pi-bluetooth dependency
+
+ -- Simon Long <simon@raspberrypi.com>  Tue, 24 Jun 2025 11:25:36 +0100
+
 pplug-bluetooth (1.0) trixie; urgency=medium
 
   * Modify for lxpanel-pi
