--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pplug-bluetooth (1.3) trixie; urgency=medium
+
+  * Use menu-popdown instead of widget_hide
+
+ -- Simon Long <simon@raspberrypi.com>  Mon, 15 Sep 2025 13:53:57 +0100
+
 pplug-bluetooth (1.2) trixie; urgency=medium
 
   * Add Chinese translation
