--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pplug-bluetooth (1.4) trixie; urgency=medium
+
+  * Add Portuguese translation
+
+ -- Simon Long <simon@raspberrypi.com>  Fri, 10 Oct 2025 10:09:27 +0100
+
 pplug-bluetooth (1.3) trixie; urgency=medium
 
   * Use menu-popdown instead of widget_hide
